k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webapp-route-621295
  namespace: argocd-621295
spec:
  to:
    kind: Service
    name: webapp-service-621295
  port:
    targetPort: 8080
  tls:
    termination: edge
